--- a/style.css
+++ b/style.css
@@ -7,3 +7,17 @@ td, th {
     border: 1px solid black;
     padding: 5px 10px;
 }
+.form1{
+    display: flex;
+    padding-right: 100px;
+    /*padding-top: 100px;*/
+    justify-content: flex-end;
+}
+.array1{
+    display: flex;
+    height: 300px;
+    width: 300px;
+    padding-left: 50px;
+    justify-content: flex-start;
+
+}
