--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@ td, th {
 .form1{
     display: flex;
     padding-right: 100px;
-    /*padding-top: 100px;*/
+    padding-top: 50px;
     justify-content: flex-end;
 }
+
 .array1{
     display: flex;
     height: 300px;
