--- a/style.css
+++ b/style.css
@@ -7,18 +7,18 @@ td, th {
     border: 1px solid black;
     padding: 5px 10px;
 }
-.form1{
-    display: flex;
-    margin: 40px;
-    justify-content: right;
-}
+/*.form1{*/
+/*    display: flex;*/
+/*    margin: 40px;*/
+/*    !*justify-content: right;*!*/
+/*}*/
 
-.array1{
-    display: flex;
-    height: 300px;
-    width: 300px;
-    padding-left: 50px;
-    justify-content: flex-start;
+/*.array1{*/
+/*    display: flex;*/
+/*    height: 300px;*/
+/*    width: 300px;*/
+/*    padding-left: 50px;*/
+    /*justify-content: flex-start;*/
 
 }
 .coffee1{
@@ -26,6 +26,14 @@ td, th {
     margin: 15px;
     padding-top: 40px;
     padding-right: 35px;
-    justify-content: right;
+    /*justify-content: right;*/
 
+}
+.container1{
+   display: flex;
+    flex-direction: column;
+}
+.container2{
+    display: flex;
+    flex-direction: row-reverse;
 }
